# rust-server

./: .gitignore  Cargo.toml  Makefile  README.md  dev.sh  tailwind.config.js
src/: main.rs
src/static/: output.css
src/templates/: dynamic.hbs
