[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.5.2"
handlebars = "5.1.1"
serde = "1.0.195"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
